--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components.css') }}">
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -36,14 +37,14 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto d-flex flex-row align-items-center">
-                    <li class="nav-item me-3">
-                        <button id="theme-toggle-btn" class="btn btn-outline-secondary">
-                            <i id="theme-icon" class="bi"></i>
+                    <li class="nav-item me-2">
+                        <button id="theme-toggle-btn" class="btn btn-outline-light btn-sm" title="切換主題">
+                            <i id="theme-icon" class="bi bi-moon-fill"></i>
                         </button>
                     </li>
                     {% if session.get('is_authorized') %}
                     <li class="nav-item">
-                        <a href="{{ url_for('main.logout') }}" class="btn btn-outline-warning"><i class="bi bi-box-arrow-right"></i> 登出</a>
+                        <a href="{{ url_for('main.logout') }}" class="btn btn-outline-warning btn-sm"><i class="bi bi-box-arrow-right"></i> 登出</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -66,6 +67,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/theme-toggle.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
